Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,18 +81,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 6, 11, 16, 21]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-2-90d565e83750>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-90d565e83750>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    return terms\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
     }
    ],
    "source": [
@@ -103,7 +101,7 @@
     "for i in range(initial_i, ending_i + 1):\n",
     "    current_element = 5*(i) + 1\n",
     "    terms.append(current_element)\n",
-    "terms"
+    "return terms"
    ]
   },
   {
