Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "[1, 6, 11, 16, 21]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,6 +103,7 @@
     "for i in range(initial_i, ending_i+1):\n",
     "    current_element = 5*(i) + 1\n",
     "    terms.append(current_element)\n",
+    "    continue \n",
     "\n",
     "terms"
    ]
