Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 6, 11, 16, 21]"
+       "[21, 26, 36, 51, 71]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i + 1):\n",
-    "    current_term = 5*i +1\n",
+    "    current_term = 5*i + current_term\n",
     "    terms.append(current_term)\n",
     "terms"
    ]
