Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[71, 73, 77, 83, 91]"
+       "[0, 2, 4, 6, 8]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i + 1):\n",
-    "    current_term = 2*i + current_term\n",
+    "    current_term = 2*i \n",
     "    terms.append(current_term)\n",
     "terms"
    ]
