--- a/index.ipynb
+++ b/index.ipynb
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 2, 4, 6, 8]"
+       "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,7 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i + 1):\n",
-    "    current_term = 2*i \n",
+    "    current_term = 2*i +\n",
     "    terms.append(current_term)\n",
     "terms"
    ]
