--- a/index.ipynb
+++ b/index.ipynb
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 3, 5, 7, 9]"
+       "[29, 31, 35, 41, 49]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +236,8 @@
     "\n",
     "terms = []\n",
     "for i in range(initial_i, ending_i + 1):\n",
-    "    current_term = 2*i +\n",
+    "    current_term = 2*i + current_term\n",
+    "\n",
     "    terms.append(current_term)\n",
     "terms"
    ]
