Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -278,7 +278,8 @@
    ],
    "source": [
     "num_range = list(range(1, 21, 5))\n",
-    "num_range"
+    "num_range\n",
+    "help(range)"
    ]
   },
   {
