Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -262,22 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 6, 11, 16]"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "num_range = list(range(1, 21, 5))\n",
+    "num_range = (range(5))\n",
     "num_range\n"
    ]
   },
