--- a/index.ipynb
+++ b/index.ipynb
@@ -262,11 +262,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 5)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_range = (range(5))\n",
+    "num_range = list(range(5))\n",
     "num_range\n"
    ]
   },
