--- a/index.ipynb
+++ b/index.ipynb
@@ -216,16 +216,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[49, 51, 55, 61, 69]"
+       "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,8 +235,8 @@
     "ending_i = 4\n",
     "\n",
     "terms = []\n",
-    "for i in range(initial_i, ending_i + 1):\n",
-    "    current_term = 2*i + current_term\n",
+    "for i in range(5):\n",
+    "    current_term = 2*i + 1\n",
     "\n",
     "    terms.append(current_term)\n",
     "terms"
