Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
     "ending_i = 4\n",
     "\n",
     "terms = []\n",
-    "for i in range(5):\n",
+    "for i in range(initial_i, ending_i +1):\n",
     "    current_term = 2*i + 1\n",
     "\n",
     "    terms.append(current_term)\n",
